Provide a common CBFS wrapper for SPI storage
Coreboot has all necessary infrastructure to use the proper SPI flash
interface in bootblock for CBFS. This patch creates a common CBFS
wrapper which can be enabled on different platforms as required.

COMMON_CBFS_SPI_WRAPPER, a new configuration option, enables the
common CBFS interface and prevents default inclusion of all SPI chip
drivers, only explicitly configured ones will be included when the new
feature is enabled. Since the wrapper uses the same driver at all
stages, enabling the new feature will also make it necessary to
include the SPI chip drivers in bootblock and romstage images.

init_default_cbfs_media() can now be common for different platforms,
and as such is defined in the library.

BUG=none
TEST=manual
   . with this change and the rest of the patches coreboot on AP148
     comes up all the way to attempting to boot the payload (reading
     earlier stages from the SPI flash along the way).

Change-Id: Ia887bb7f386a0e23a110e38001d86f9d43fadf2c
Signed-off-by: Vadim Bendebury <vbendeb@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/197800
Tested-by: Vadim Bendebury <vbendeb@google.com>
Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-by: David Hendricks <dhendrix@chromium.org>

--- a/src/Kconfig
+++ b/src/Kconfig
@@ -56,6 +56,14 @@ config ALT_CBFS_LOAD_PAYLOAD
 	 through memory-mapped I/O is slow and a faster alternative can be
 	 provided.
 
+config COMMON_CBFS_SPI_WRAPPER
+       bool
+       default n
+       depends on SPI_FLASH
+       depends on !ARCH_X86
+       help
+         Use common wrapper to interface CBFS to SPI bootprom.
+
 choice
 	prompt "Compiler to use"
 	default COMPILER_GCC
