--- a/src/drivers/spi/Kconfig
+++ b/src/drivers/spi/Kconfig
@@ -50,7 +50,7 @@ config SPI_FLASH_SMM
 
 config SPI_FLASH_EON
 	bool
-	default y
+	default y if !COMMON_CBFS_SPI_WRAPPER
 	depends on SPI_FLASH
 	help
 	  Select this option if your chipset driver needs to store certain
@@ -58,7 +58,7 @@ config SPI_FLASH_EON
 
 config SPI_FLASH_MACRONIX
 	bool
-	default y
+	default y if !COMMON_CBFS_SPI_WRAPPER
 	depends on SPI_FLASH
 	help
 	  Select this option if your chipset driver needs to store certain
@@ -66,7 +66,7 @@ config SPI_FLASH_MACRONIX
 
 config SPI_FLASH_SPANSION
 	bool
-	default y
+	default y if !COMMON_CBFS_SPI_WRAPPER
 	depends on SPI_FLASH
 	help
 	  Select this option if your chipset driver needs to store certain
@@ -74,7 +74,7 @@ config SPI_FLASH_SPANSION
 
 config SPI_FLASH_SST
 	bool
-	default y
+	default y if !COMMON_CBFS_SPI_WRAPPER
 	depends on SPI_FLASH
 	help
 	  Select this option if your chipset driver needs to store certain
@@ -82,7 +82,7 @@ config SPI_FLASH_SST
 
 config SPI_FLASH_STMICRO
 	bool
-	default y
+	default y if !COMMON_CBFS_SPI_WRAPPER
 	depends on SPI_FLASH
 	help
 	  Select this option if your chipset driver needs to store certain
@@ -90,7 +90,7 @@ config SPI_FLASH_STMICRO
 
 config SPI_FLASH_WINBOND
 	bool
-	default y
+	default y if !COMMON_CBFS_SPI_WRAPPER
 	depends on SPI_FLASH
 	help
 	  Select this option if your chipset driver needs to store certain
@@ -106,7 +106,7 @@ config SPI_FLASH_NO_FAST_READ
 
 config SPI_FLASH_GIGADEVICE
 	bool
-	default y
+	default y if !COMMON_CBFS_SPI_WRAPPER
 	depends on SPI_FLASH
 	help
 	  Select this option if your chipset driver needs to store certain
