--- a/src/mainboard/google/storm/Kconfig
+++ b/src/mainboard/google/storm/Kconfig
@@ -22,8 +22,11 @@ if BOARD_GOOGLE_STORM
 config BOARD_SPECIFIC_OPTIONS
 	def_bool y
 	select ARCH_ARM
+	select COMMON_CBFS_SPI_WRAPPER
 	select MAINBOARD_HAS_BOOTBLOCK_INIT
 	select SOC_QC_IPQ806X
+	select SPI_FLASH
+	select SPI_FLASH_SPANSION
 
 config MAINBOARD_DIR
 	string
