i2c: Add software_i2c driver for I2C debugging and emulation
This patch adds I2C emulation in software through raw toggling of the
SDA/SCL lines. Platforms need to provide bindings to toggle their
respective I2C busses for this to work (e.g. by pinmuxing them as GPIOs,
currently only enabled for Tegra).

This is mostly useful as a debugging feature, to drive unusual states on
a bus and closely monitor the device output without the need of a bus
analyzer. It provides a few functions to "wedge" an I2C bus by aborting
a transaction at certain points, which can be used to test if a system
can correctly recover from an ill-timed reboot. However, it can also
dynamically replace the existing I2C transfer functions and drive
some/all I2C transfers on the system, which might be useful if a driver
for the actual I2C controller hardware is not (yet) available.

Based on original code by Doug Anderson <dianders@chromium.org> and
Hung-ying Tyan <tyanh@chromium.org> for the ChromeOS embedded
controller project.

BRANCH=None
BUG=chrome-os-partner:28323
TEST=Spread tegra_software_i2c_init()/tegra_software_i2c_disable()
through the code and see that everything still works.

Change-Id: I9ee7ccbd1efb38206669a35d0c3318af16f8be63
Signed-off-by: Julius Werner <jwerner@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/198791
Reviewed-by: Doug Anderson <dianders@chromium.org>
Reviewed-by: Tom Warren <twarren@nvidia.com>
Reviewed-by: Stefan Reinauer <reinauer@chromium.org>

--- a/src/device/Kconfig
+++ b/src/device/Kconfig
@@ -526,3 +526,13 @@ config SUBSYSTEM_DEVICE_ID
 	help
 	  This config option will override the devicetree settings for
 	  PCI Subsystem Device ID.
+
+config SOFTWARE_I2C
+	bool "Enable I2C controller emulation in software"
+	default n
+	help
+	  This config option will enable code to override the i2c_transfer
+	  routine with a (simple) software emulation of the protocol. This may
+	  be useful for debugging or on platforms where a driver for the real
+	  I2C controller is not (yet) available. The platform code needs to
+	  provide bindings to manually toggle I2C lines.
