--- a/src/soc/nvidia/tegra124/Makefile.inc
+++ b/src/soc/nvidia/tegra124/Makefile.inc
@@ -13,6 +13,7 @@ bootblock-y += power.c
 bootblock-y += spi.c
 bootblock-y += ../tegra/gpio.c
 bootblock-y += ../tegra/i2c.c
+bootblock-$(CONFIG_SOFTWARE_I2C) += ../tegra/software_i2c.c
 bootblock-y += ../tegra/pingroup.c
 bootblock-y += ../tegra/pinmux.c
 bootblock-y += ../tegra/apbmisc.c
@@ -34,6 +35,7 @@ romstage-y += sdram_lp0.c
 romstage-y += spi.c
 romstage-y += ../tegra/gpio.c
 romstage-y += ../tegra/i2c.c
+romstage-$(CONFIG_SOFTWARE_I2C) += ../tegra/software_i2c.c
 romstage-y += ../tegra/pinmux.c
 romstage-y += timer.c
 ifeq ($(CONFIG_EARLY_CONSOLE),y)
@@ -55,6 +57,7 @@ ramstage-y += spi.c
 ramstage-y += dp.c
 ramstage-y += ../tegra/gpio.c
 ramstage-y += ../tegra/i2c.c
+ramstage-$(CONFIG_SOFTWARE_I2C) += ../tegra/software_i2c.c
 ramstage-y += ../tegra/pinmux.c
 ramstage-y += ../tegra/usb.c
 ramstage-y += timer.c
