--- a/src/soc/qualcomm/ipq806x/Kconfig
+++ b/src/soc/qualcomm/ipq806x/Kconfig
@@ -6,6 +6,7 @@ config SOC_QC_IPQ806X
 	select ARCH_ROMSTAGE_ARM_V7
 	select BOOTBLOCK_CONSOLE
 	select DYNAMIC_CBMEM
+	select EARLY_CONSOLE
 	select HAVE_UART_MEMORY_MAPPED
 	select HAVE_UART_SPECIAL
 	select SPI_ATOMIC_SEQUENCING
