--- a/src/soc/qualcomm/ipq806x/Kconfig
+++ b/src/soc/qualcomm/ipq806x/Kconfig
@@ -51,21 +51,24 @@ config RAMSTAGE_BASE
 	hex
 	default 0x4060c000
 
+config SYS_SDRAM_BASE
+	hex
+	default 0x40000000
 
 config STACK_TOP
-        hex
-        default 0x40600000
+	hex
+	default 0x40600000
 
 config STACK_BOTTOM
        hex
        default 0x405fc000
 
 config CBFS_CACHE_ADDRESS
-        hex "memory address to put CBFS cache data"
-        default 0x405e6000
+	hex "memory address to put CBFS cache data"
+	default 0x405e6000
 
 config CBFS_CACHE_SIZE
-        hex "size of CBFS cache data"
-        default 0x00016000
+	hex "size of CBFS cache data"
+	default 0x00016000
 
 endif
