--- a/src/mainboard/intel/wtm2/Kconfig
+++ b/src/mainboard/intel/wtm2/Kconfig
@@ -2,10 +2,7 @@ if BOARD_INTEL_WTM2
 
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
-	select CPU_INTEL_SOCKET_RPGA989
-	select NORTHBRIDGE_INTEL_HASWELL
-	select SOUTHBRIDGE_INTEL_LYNXPOINT
-	select INTEL_LYNXPOINT_LP
+	select SOC_INTEL_BROADWELL
 	select BOARD_ROMSIZE_KB_8192
 	select HAVE_ACPI_TABLES
 	select HAVE_OPTION_TABLE
@@ -16,8 +13,16 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select EXTERNAL_MRC_BLOB
 	select CACHE_ROM
 	select MARK_GRAPHICS_MEM_WRCOMB
-	select MAINBOARD_HAS_NATIVE_VGA_INIT
 	select MONOTONIC_TIMER_MSR
+	select CHROMEOS_RAMOOPS_DYNAMIC
+
+config VBOOT_RAMSTAGE_INDEX
+	hex
+	default 0x1
+
+config VBOOT_REFCODE_INDEX
+	hex
+	default 0x2
 
 config MAINBOARD_DIR
 	string
@@ -26,10 +31,6 @@ config MAINBOARD_DIR
 config MAINBOARD_PART_NUMBER
 	string
 	default "WHITETIP MOUNTAIN 2"
-
-config MMCONF_BASE_ADDRESS
-	hex
-	default 0xf0000000
 
 config IRQ_SLOT_COUNT
 	int
