samus: Update for board revision 1.9
- Update GPIO map
- Update SPD for new memory and 4-bit table decode
- Enable USB3 port 3 and 4 (shared with PCIe port 1)
- Enable PCIe port 3 and disable port 1
- Enable SerialIO ACPI mode for devices
- Disable S0ix for now to prevent use of C10
- Special handling for memory with broadwell CPU

BUG=chrome-os-partner:28234
TEST=Boot on P1.9

Change-Id: If6adcc2ea76f1af7613b715133483d7661e94dd8
Signed-off-by: Duncan Laurie <dlaurie@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/201083
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/src/mainboard/google/samus/spd/Makefile.inc
+++ b/src/mainboard/google/samus/spd/Makefile.inc
@@ -21,15 +21,23 @@ romstage-y += spd.c
 
 SPD_BIN = $(obj)/spd.bin
 
-# { GPIO69, GPIO68, GPIO67 }
-SPD_SOURCES  = empty            # 0: { 0, 0, 0 }
-SPD_SOURCES += elpida_4Gb       # 1: { 0, 0, 1 }
-SPD_SOURCES += empty            # 2: { 0, 1, 0 }
-SPD_SOURCES += elpida_8Gb       # 3: { 0, 1, 1 }
-SPD_SOURCES += empty            # 4: { 1, 0, 0 }
-SPD_SOURCES += samsung_8Gb      # 5: { 1, 0, 1 }
-SPD_SOURCES += samsung_4Gb      # 6: { 1, 1, 0 }
-SPD_SOURCES += empty            # 7: { 1, 1, 1 }
+# { GPIO66, GPIO69, GPIO68, GPIO67 }
+SPD_SOURCES  = empty            # 0b0000
+SPD_SOURCES += empty            # 0b0001
+SPD_SOURCES += empty            # 0b0010
+SPD_SOURCES += empty            # 0b0011
+SPD_SOURCES += empty            # 0b0100
+SPD_SOURCES += empty            # 0b0101
+SPD_SOURCES += samsung_4Gb      # 0b0110
+SPD_SOURCES += empty            # 0b0111
+SPD_SOURCES += hynix_4Gb        # 0b1000
+SPD_SOURCES += empty            # 0b1001
+SPD_SOURCES += samsung_8Gb      # 0b1010
+SPD_SOURCES += empty            # 0b1011
+SPD_SOURCES += hynix_8Gb        # 0b1100
+SPD_SOURCES += empty            # 0b1101
+SPD_SOURCES += empty            # 0b1110
+SPD_SOURCES += empty            # 0b1111
 
 SPD_DEPS := $(foreach f, $(SPD_SOURCES), src/mainboard/$(MAINBOARDDIR)/spd/$(f).spd.hex)
 
