--- a/src/mainboard/Kconfig
+++ b/src/mainboard/Kconfig
@@ -341,4 +341,9 @@ config MAINBOARD_VERSION
 	default "1.0"
 	help
 	  Define the used version number which will be used by SMBIOS tables.
+
+config MAINBOARD_ENCLOSURE_TYPE
+	hex "System Enclosure or Chassis type"
+	depends on GENERATE_SMBIOS_TABLES
+	default 0x3
 endmenu
