--- a/src/soc/nvidia/tegra124/Kconfig
+++ b/src/soc/nvidia/tegra124/Kconfig
@@ -8,6 +8,7 @@ config SOC_NVIDIA_TEGRA124
 	select DYNAMIC_CBMEM
 	select ARM_BOOTBLOCK_CUSTOM
 	select ARCH_BOOTBLOCK_ARM_V4
+	select ARCH_VERSTAGE_ARM_V7
 	select ARCH_ROMSTAGE_ARM_V7
 	select ARCH_RAMSTAGE_ARM_V7
 	select ARM_LPAE
