--- a/src/soc/Kconfig
+++ b/src/soc/Kconfig
@@ -2,4 +2,5 @@ source src/soc/intel/Kconfig
 source src/soc/nvidia/Kconfig
 source src/soc/qualcomm/Kconfig
 source src/soc/samsung/Kconfig
+source src/soc/rockchip/Kconfig
 
