coreboot tegra132: Fix Kconfig variable names
Change Kconfig UART variable names to make them unique. Names used earlier were
conflicting with t124 names. Thus, UART_ADDRESS and others turned out to be
zero.

BUG=None
BRANCH=None
TEST=Compiles successfully for rush. bootblock prints message on serial console.

Change-Id: I221ef25e5bd2dc5d97928c2eaf4281ea7caf1403
Signed-off-by: Furquan Shaikh <furquan@google.com>
Reviewed-on: https://chromium-review.googlesource.com/205432
Tested-by: Furquan Shaikh <furquan@chromium.org>
Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Commit-Queue: Aaron Durbin <adurbin@chromium.org>
Reviewed-by: Tom Warren <twarren@nvidia.com>

--- a/src/soc/nvidia/tegra132/Kconfig
+++ b/src/soc/nvidia/tegra132/Kconfig
@@ -54,44 +54,45 @@ config STACK_BOTTOM
 
 choice CONSOLE_SERIAL_TEGRA132_UART_CHOICES
 	prompt "Serial Console UART"
-	default CONSOLE_SERIAL_UARTA
+	default CONSOLE_SERIAL_TEGRA132_UARTA
 	depends on CONSOLE_SERIAL_UART
 
-config CONSOLE_SERIAL_UARTA
+config CONSOLE_SERIAL_TEGRA132_UARTA
 	bool "UARTA"
+	default y
 	help
 	  Serial console on UART A.
 
-config CONSOLE_SERIAL_UARTB
+config CONSOLE_SERIAL_TEGRA132_UARTB
 	bool "UARTB"
 	help
 	  Serial console on UART B.
 
-config CONSOLE_SERIAL_UARTC
+config CONSOLE_SERIAL_TEGRA132_UARTC
 	bool "UARTC"
 	help
 	  Serial console on UART C.
 
-config CONSOLE_SERIAL_UARTD
+config CONSOLE_SERIAL_TEGRA132_UARTD
 	bool "UARTD"
 	help
 	  Serial console on UART D.
 
-config CONSOLE_SERIAL_UARTE
+config CONSOLE_SERIAL_TEGRA132_UARTE
 	bool "UARTE"
 	help
 	  Serial console on UART E.
 
 endchoice
 
-config CONSOLE_SERIAL_UART_ADDRESS
+config CONSOLE_SERIAL_TEGRA132_UART_ADDRESS
 	hex
 	depends on CONSOLE_SERIAL_UART
-	default 0x70006000 if CONSOLE_SERIAL_UARTA
-	default 0x70006040 if CONSOLE_SERIAL_UARTB
-	default 0x70006200 if CONSOLE_SERIAL_UARTC
-	default 0x70006300 if CONSOLE_SERIAL_UARTD
-	default 0x70006400 if CONSOLE_SERIAL_UARTE
+	default 0x70006000 if CONSOLE_SERIAL_TEGRA132_UARTA
+	default 0x70006040 if CONSOLE_SERIAL_TEGRA132_UARTB
+	default 0x70006200 if CONSOLE_SERIAL_TEGRA132_UARTC
+	default 0x70006300 if CONSOLE_SERIAL_TEGRA132_UARTD
+	default 0x70006400 if CONSOLE_SERIAL_TEGRA132_UARTE
 	help
 	  Map the UART names to the respective MMIO addres.
 
