--- a/src/mainboard/google/rush/Kconfig
+++ b/src/mainboard/google/rush/Kconfig
@@ -22,6 +22,7 @@ if BOARD_GOOGLE_RUSH
 config BOARD_SPECIFIC_OPTIONS # dummy
         def_bool y
 	select SOC_NVIDIA_TEGRA132
+	select MAINBOARD_HAS_BOOTBLOCK_INIT
 
 config MAINBOARD_DIR
         string
