--- a/src/mainboard/google/rush/Makefile.inc
+++ b/src/mainboard/google/rush/Makefile.inc
@@ -27,6 +27,12 @@ $(obj)/generated/bct.cfg:
 
 subdirs-y += bct
 
+bootblock-y += boardid.c
+bootblock-y += bootblock.c
+bootblock-y += pmic.c
+bootblock-y += reset.c
+
 romstage-y += romstage.c
+romstage-y += reset.c
 
 ramstage-y += mainboard.c
