t132: add mts microcode to cbfs
In order to bring the denver core complex up the MTS microcode
needs to be loaded. Include the MTS microcode in cbfs.

BUG=chrome-os-partner:29922
BRANCH=None
TEST=Built and noted mts is in cbfs.

Change-Id: I863202b06a866a37073009364ddc0d929f5d6d46
Signed-off-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/205635
Reviewed-by: Tom Warren <twarren@nvidia.com>
Reviewed-by: Furquan Shaikh <furquan@chromium.org>

--- a/src/soc/nvidia/tegra132/Makefile.inc
+++ b/src/soc/nvidia/tegra132/Makefile.inc
@@ -78,3 +78,10 @@ $(objcbfs)/bootblock.bin: $(objcbfs)/bootblock.raw.bin $(BCT_BIN)
 	echo "BootLoader = $<,$(CONFIG_BOOTBLOCK_BASE),$(CONFIG_BOOTBLOCK_BASE),Complete;" >> $(BCT_WRAPPER)
 	@printf "    CBOOTIMAGE $(subst $(obj)/,,$(@))\n"
 	$(CBOOTIMAGE) $(CBOOTIMAGE_OPTS) $(BCT_WRAPPER) $@
+
+# MTS microcode
+MTS_FILE = 3rdparty/mainboard/$(MAINBOARDDIR)/mts_si
+MTS_FILE_CBFS = mts
+cbfs-files-y += $(MTS_FILE_CBFS)
+$(MTS_FILE_CBFS)-file := $(MTS_FILE)
+$(MTS_FILE_CBFS)-type := 0x50
