--- a/src/soc/nvidia/tegra132/Kconfig
+++ b/src/soc/nvidia/tegra132/Kconfig
@@ -2,12 +2,13 @@ config SOC_NVIDIA_TEGRA132
 	bool
 	default n
 	select ARCH_BOOTBLOCK_ARM_V4
-	select ARCH_ROMSTAGE_ARM_V8_64
+	select ARCH_ROMSTAGE_ARM_V4
 	select ARCH_RAMSTAGE_ARM_V8_64
 	select ARM_LPAE
 	select BOOTBLOCK_CONSOLE
 	select HAVE_UART_SPECIAL
 	select HAVE_UART_MEMORY_MAPPED
+	select EARLY_CONSOLE
 	select ARM_BOOTBLOCK_CUSTOM
 
 if SOC_NVIDIA_TEGRA132
