--- a/src/soc/nvidia/tegra132/Kconfig
+++ b/src/soc/nvidia/tegra132/Kconfig
@@ -41,6 +41,10 @@ config ROMSTAGE_BASE
 	hex
 	default 0x4002c000
 
+config SYS_SDRAM_BASE
+	hex
+	default 0x80000000
+
 config RAMSTAGE_BASE
 	hex
 	default 0x80200000
