--- a/src/mainboard/google/rush/Makefile.inc
+++ b/src/mainboard/google/rush/Makefile.inc
@@ -33,6 +33,7 @@ bootblock-y += pmic.c
 bootblock-y += reset.c
 
 romstage-y += reset.c
+romstage-y += romstage.c
 romstage-y += sdram_configs.c
 
 ramstage-y += mainboard.c
