t132: enable cbmem console support
Enabled CBMEM support for t132 platforms. Some of the existing
code is moved around to avoid dependencies in the other stages
that need it.

BUG=None
BRANCH=None
TEST=Built and booted a rush with cbmem support.

Change-Id: I78a31b58ab9cc01a7b5d1fffdb6c8ae0c446c7dd
Signed-off-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/207163
Reviewed-by: Furquan Shaikh <furquan@chromium.org>

--- a/src/soc/nvidia/tegra132/Kconfig
+++ b/src/soc/nvidia/tegra132/Kconfig
@@ -10,6 +10,7 @@ config SOC_NVIDIA_TEGRA132
 	select HAVE_UART_MEMORY_MAPPED
 	select EARLY_CONSOLE
 	select ARM_BOOTBLOCK_CUSTOM
+	select DYNAMIC_CBMEM
 
 if SOC_NVIDIA_TEGRA132
 
@@ -80,6 +81,10 @@ config CBFS_CACHE_ADDRESS
 config CBFS_CACHE_SIZE
 	hex "size of CBFS cache data"
 	default 0x00016000
+
+config CBMEM_CONSOLE_PRERAM_BASE
+	hex "memory address of the CBMEM console buffer"
+	default 0x40004020
 
 choice CONSOLE_SERIAL_TEGRA132_UART_CHOICES
 	prompt "Serial Console UART"
