t132: add Kconfig option for MTS microcode directory
In order to make sharing of the location of MTS microcode easier
provide a Kconfig option that is the path to the files.

BUG=chrome-os-partner:30569
BRANCH=None
TEST=Built rush coreboot.

Change-Id: I36775d0018fc8591d5e77c2943e28a51381713f5
Signed-off-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/207839
Reviewed-by: Tom Warren <twarren@nvidia.com>
Reviewed-by: Furquan Shaikh <furquan@chromium.org>

--- a/src/soc/nvidia/tegra132/Kconfig
+++ b/src/soc/nvidia/tegra132/Kconfig
@@ -130,4 +130,10 @@ config CONSOLE_SERIAL_TEGRA132_UART_ADDRESS
 	help
 	  Map the UART names to the respective MMIO addres.
 
+config MTS_DIRECTORY
+	string "Directory where MTS microcode files are located"
+	default "."
+	help
+	  Path to directory where MTS microcode files are located.
+
 endif
